# AoC_2024

./: .gitignore  CMakeLists.txt
config/: example_02.txt
include/: CMakeLists.txt  GardenPlots_12.hpp  LabGrid.hpp  Locations_1.hpp  MemoryParser_03.hpp  MemoryRun_18.hpp  MonkeyMarket_22.hpp  Reader.hpp  RedNoseReport_02.hpp  RobotPath_14.hpp  XmasParser.hpp
src/: CMakeLists.txt  GardenPlots_12.cpp  LabGrid.cpp  Locations_1.cpp  MemoryParser_03.cpp  MemoryRun_18.cpp  MonkeyMarket_22.cpp  Reader.cpp  RedNoseReport_02.cpp  RobotPath_14.cpp  XmasParser.cpp  main.cpp
